*Version 2.5.0*
* Upgraded to Jetty 9
* Improved JSP Performance
* Added status servlet to serve Mango application Status in JSON format at /status/mango.json
* Upgraded H2 to 1.4.180
* Upgraded Spring to 4.0.5
* Upgraded serotonin-utils to 2.1.3
* Added security to viewing data sources and data points so only users with proper permissions can see them
* Added additional links to Alarm Report table to allow clicking through to item of interest in event
* Added filter action to Alarm Links at top of page when multiple alarms are present
* Added list of available Units to select for each point
* Added Range Event detectors for Numeric points to alarm when values remain within or outside of a range
* Added Not higher than option to High Limit event detector
* Added Not lower than option to Low Limit event detector
* Added ability for Plain Text Renderer to use Units if defined as suffix
* Added css and favicon to url versioning system to ensure browser cache-refreshes on core updates
* Added some protective measures to ensure users with multiple tabs open don't clobber points and data sources, only 1 tab is officially supported

*Version 2.4.3*
* Modified data type select tag

*Version 2.4.2*
* Fixed bug when using H2 and filtering Data Points, Data Sources or Alarms tables
* Changed all filtering to be case insensitive
* Fixed bug where importing Binary values would fail
* Fixed bug where point value getValuesBetween query was returning a slightly different value than the point value count values between

*Version 2.4.0*
* Slight improvements to the UI table auto formatting
* Added Database storage for Logs
* Added NoSQL access for log storage
* Added new InfiniteTable javascript table for general use
* Fixing UrlSecurity filter code and filter order to allow Anonymous access to pages
* Removing database row ID from excel export and data import to comply with NoSQL standards
* Fixed bug where No Change and No Update Event Detectors were showing invalid durations